// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputText renders correctly 1`] = `
<InputText
  className="custom-class-name"
  name="field-name"
  onChange={[MockFunction]}
  value="value"
>
  <div
    className="column field custom-class-name"
  >
    <label
      className="label"
      htmlFor="field-name.label"
    >
      field-name.label
    </label>
    <input
      className="input"
      id="field-name.label"
      onChange={[Function]}
      type="text"
      value="value"
    />
  </div>
</InputText>
`;

exports[`InputText renders correctly if optional 1`] = `
<InputText
  className="custom-class-name"
  name="field-name"
  onChange={[MockFunction]}
  optional={true}
  value="value"
>
  <div
    className="column field custom-class-name"
  >
    <label
      className="label has-text-weight-normal"
      htmlFor="field-name.label"
    >
      field-name.label
    </label>
    <input
      className="input"
      id="field-name.label"
      onChange={[Function]}
      type="text"
      value="value"
    />
  </div>
</InputText>
`;
